# paper_lobster

./: .env.example  .gitignore  EVOLUTION_PLAN.md  MIGRATION_TODO.md  PROJECT.md  Procfile  README.md  main.py  pyproject.toml  requirements.txt
agent/: deep_research.py  evolve.py  lobster.py  mirror.py  prompts.py  roles.py  spawn.py
bot/: telegram.py
brain/: curiosity_loop.py  hypothesize.py  reflect.py
data/: knowledge_state.json
data/migration_backup_20260415T094557/: curiosity.md  soul.md  style.md
data/migrations/: 2026-04-16_evolution_v5.sql
db/: client.py  schema_v2.5.sql  schema_v3.sql
digester/: connect.py  extract.py  synthesize.py
digester/schemas/: biorxiv.json  pubmed.json  twitter.json
docs/: evolution_plan.md  technical_review_v2.5.md
docs/v3/: lobster-v3-spec.md  lobster-v3-supplement.md
explorer/: academic.py  pdf_reader.py  reader.py  search.py
explorer/sources/: biorxiv.py  pubmed.py
identity/: curiosity.md  memory.md  soul.md  style.md
llm/: client.py  local_client.py  router.py
lobster/: _legacy_main.py  cli.py
lobster/bot/: digest.py  (+1 more)
publisher/: engagement_tracker.py
scheduler/: heartbeat.py
skills/: cross_domain.md  hot_take.md  hype_check.md  proactive_engagement.md  reply_engagement.md  research_commentary.md  today_i_learned.md  trend_analysis.md
tests/: test_bridge_llm.py  test_cli.py  test_db_connect.py  test_identity_modes.py  test_llm_config.py  test_model_resolver.py  test_prompt_budget.py  test_telegram_auth.py
utils/: hook_evaluator.py  identity_loader.py  number_validator.py  token_tracker.py
(+84 files in other folders)
